fix overflow handling on code blocks

--- a/src/fstyle.css
+++ b/src/fstyle.css
@@ -68,7 +68,7 @@ h3 {
   background-color: #D9D9D9;
 }
 
-pre.highlight {
+div.highlight pre {
   /* Avoid pushing up the copy buttons. */
   margin: 0;
   overflow-x: auto;
